k8s/11-cilium-network-policy/client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: network-client
  namespace: lab
  labels:
    app: network-client
    access: backend-allowed
spec:
  containers:
    - name: curl
      image: curlimages/curl:8.12.1
      imagePullPolicy: IfNotPresent

      command:
        - sleep
        - infinity

      resources:
        requests:
          cpu: 10m
          memory: 16Mi

        limits:
          cpu: 50m
          memory: 64Mi
