k8s/11-cilium-network-policy/01-deny-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-backend-ingress
  namespace: lab
spec:
  podSelector:
    matchLabels:
      app: network-backend

  policyTypes:
    - Ingress

  ingress: []
