k8s/11-cilium-network-policy/02-allow-client-to-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-client-to-backend
  namespace: lab
spec:
  podSelector:
    matchLabels:
      app: network-backend

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: network-client

      ports:
        - protocol: TCP
          port: 80
