k8s/11-cilium-network-policy/03-deny-client-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-client-egress
  namespace: lab
spec:
  podSelector:
    matchLabels:
      app: network-client

  policyTypes:
    - Egress

  egress: []
