k8s/11-cilium-network-policy/05-allow-client-to-backend-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-client-to-backend-egress
  namespace: lab
spec:
  podSelector:
    matchLabels:
      app: network-client

  policyTypes:
    - Egress

  egress:
    - to:
        - podSelector:
            matchLabels:
              app: network-backend

      ports:
        - protocol: TCP
          port: 80
